<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.codeknights.otpverification">

    <EditText
        android:id="@+id/Number"
        android:layout_width="276dp"
        android:layout_height="47dp"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_your_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="270dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="27dp"
        android:onClick="send_sms"
        android:text="@string/request_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Number" />

    <EditText
        android:id="@+id/OTP"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginBottom="243dp"
        android:layout_marginEnd="93dp"
        android:layout_marginStart="26dp"
        android:ems="10"
        android:hint="@string/enter_otp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="157dp"
        android:layout_marginEnd="270dp"
        android:layout_marginStart="26dp"
        android:onClick="verify"
        android:text="@string/verify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
